--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,12 @@ environment:
   sdk: '>=3.2.5 <4.0.0'
 
 dependencies:
+  cloud_firestore: ^4.17.2
   firebase_auth: '>=4.17.8'
   firebase_core: ^2.30.0
   flutter:
     sdk: flutter
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
